--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,50 @@
-<p>signup works!</p>
+<form #signup="ngForm" (ngSubmit)="onSubmit()">
+  <p>
+    <mat-form-field appearance="fill">
+      <mat-label>Nome de usuário</mat-label>
+      <input matInput name="username" ngModel required />
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
+  </p>
+
+  <p>
+    <mat-form-field appearance="fill">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" name="email" ngModel required />
+      <mat-icon matSuffix>email</mat-icon>
+    </mat-form-field>
+  </p>
+
+  <p>
+    <mat-form-field class="full-width" appearance="fill">
+      <mat-label>Data de nascimento</mat-label>
+      <input
+        matInput
+        [matDatepicker]="picker"
+        name="birthdate"
+        ngModel
+        required
+      />
+      <mat-datepicker-toggle matSuffix [for]="picker">
+      </mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  </p>
+
+  <p>
+    <mat-form-field appearance="fill">
+      <mat-label>Senha</mat-label>
+      <input matInput type="password" name="password" ngModel required />
+      <mat-icon matSuffix>lock</mat-icon>
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-form-field appearance="fill">
+      <mat-label>Confirmar Senha</mat-label>
+      <input matInput type="password" name="confirm_password" ngModel required />
+      <mat-icon matSuffix>lock</mat-icon>
+    </mat-form-field>
+  </p>
+
+  <button type="submit" mat-raised-button color="primary" [disabled]="signup.invalid">Cadastrar</button>
+</form>
