--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -17,7 +17,12 @@
     </mat-form-field>
   </p>
 
-  <button type="submit" [disabled]="login.invalid" mat-raised-button color="primary">
+  <button
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="login.invalid"
+  >
     Entrar
   </button>
 </form>
