--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,7 +2,13 @@
   <p>
     <mat-form-field appearance="fill">
       <mat-label>Nome de usuário</mat-label>
-      <input matInput name="username" ngModel required />
+      <input
+        matInput
+        placeholder="Placeholder"
+        required
+        name="username"
+        ngModel
+      />
       <mat-icon matSuffix>person</mat-icon>
     </mat-form-field>
   </p>
@@ -10,13 +16,20 @@
   <p>
     <mat-form-field appearance="fill">
       <mat-label>Email</mat-label>
-      <input matInput type="email" name="email" ngModel required />
+      <input
+        matInput
+        type="email"
+        placeholder="Placeholder"
+        required
+        name="email"
+        ngModel
+      />
       <mat-icon matSuffix>email</mat-icon>
     </mat-form-field>
   </p>
 
   <p>
-    <mat-form-field class="full-width" appearance="fill">
+    <mat-form-field appearance="fill">
       <mat-label>Data de nascimento</mat-label>
       <input
         matInput
@@ -25,26 +38,45 @@
         ngModel
         required
       />
-      <mat-datepicker-toggle matSuffix [for]="picker">
-      </mat-datepicker-toggle>
+      <mat-datepicker-toggle matSuffix [for]="picker"> </mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </p>
-
   <p>
     <mat-form-field appearance="fill">
       <mat-label>Senha</mat-label>
-      <input matInput type="password" name="password" ngModel required />
+      <input
+        matInput
+        type="password"
+        placeholder="Placeholder"
+        required
+        name="password"
+        ngModel
+      />
       <mat-icon matSuffix>lock</mat-icon>
     </mat-form-field>
   </p>
   <p>
     <mat-form-field appearance="fill">
       <mat-label>Confirmar Senha</mat-label>
-      <input matInput type="password" name="confirm_password" ngModel required />
+      <input
+        matInput
+        type="password"
+        placeholder="Placeholder"
+        required
+        name="confirm_password"
+        ngModel
+      />
       <mat-icon matSuffix>lock</mat-icon>
     </mat-form-field>
   </p>
 
-  <button type="submit" mat-raised-button color="primary" [disabled]="signup.invalid">Cadastrar</button>
+  <button
+    type="submit"
+    mat-raised-button
+    color="primary"
+    [disabled]="signup.invalid"
+  >
+    Cadastrar
+  </button>
 </form>
