--- a/src/app/home/movie-detail/movie-detail.component.html
+++ b/src/app/home/movie-detail/movie-detail.component.html
@@ -1,10 +1,12 @@
 <section *ngIf="detail$ | async as detail" class="section-details">
-  <img src="https://image.tmdb.org/t/p/w300/{{ detail.poster_path}}" alt="Poster">
-  <h1 class="mat-h1">{{ detail.title}}</h1>
+  <div class="img">
+    <img  src="https://image.tmdb.org/t/p/w300/{{ detail.poster_path}}" alt="Poster">
+  </div>
+  <h1 class="mat-h1">{{ detail.title }}</h1>
   <p class="mat-body-2">{{detail.overview}}</p>
   <mat-chip-list>
     <mat-chip color="accent" selected >{{detail.vote_average}}</mat-chip>
   </mat-chip-list>
-  <img src="https://image.tmdb.org/t/p/w300/{{ detail.backdrop_path}}" alt="Backdrop">
+  <img class="img-backdrop" src="https://image.tmdb.org/t/p/w300/{{ detail.backdrop_path}}" alt="Backdrop">
 
 </section>
